--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SelectChampionActivity"></activity>
+        <activity android:name=".SelectChampionActivity" />
+        <activity android:name=".InputAnswerActivity" />
+        <activity
+            android:name=".DisplayTutorialActivity"
+            android:parentActivityName=".MainActivity">
+            <!-- The meta-data tag is required if you support API level 15 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
         <activity
             android:name=".DisplayAnswerActivity"
             android:parentActivityName=".DisplayResultActivity">
-            >
         </activity>
         <activity android:name=".DisplayResultActivity" />
+        <activity android:name=".DisplayQuestionActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
